--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+
+    <title>Luci Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">   
+    <!-- <script type ="text/javascript" src="Test1.js"></script> -->
+    <link rel="stylesheet" href="teststyles.css">
+
+</head>
+
+<body>
+
+  <!-- Very basic title -->
+    Luci
+  <!-- Form consisting of text submission and button to print to console -->
+  <form class="pure-form">
+    <input id="name" type="text" placeholder="Enter Name" />
+    <button type="submit"><i class="fa fa-chevron-circle-right"></i></button>
+</form> 
+
+<script>
+    
+    var nameInput = document.getElementById('name');
+
+    document.querySelector('form.pure-form').addEventListener('submit', function (e) {
+
+    //prevent the normal submission of the form
+    e.preventDefault();
+
+    console.log(nameInput.value);    
+});
+
+</script>
+
+</body>
+
+</html>
