--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,8 @@
 
     <title>Luci Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">   
-    <!-- <script type ="text/javascript" src="Test1.js"></script> -->
+    <script src="Test1.js"></script>
     <link rel="stylesheet" href="teststyles.css">
-
 </head>
 
 <body>
@@ -18,24 +17,9 @@
   <form class="pure-form">
     <input id="name" type="text" placeholder="Enter Name" />
     <input id="password" type="text" placeholder="Enter Password" />
-    <button type="submit"><i class="fa fa-chevron-circle-right"></i></button>
+    <button type="submit" onclick="testFunction()"></button>
 </form> 
 
-<script>
-    
-    var nameInput = document.getElementById('name');
-    var pwInput = document.getElementById('password');
-
-    document.querySelector('form.pure-form').addEventListener('submit', function (e) {
-
-    //prevent the normal submission of the form
-    e.preventDefault();
-
-    console.log(nameInput.value);    
-    console.log(pwInput.value);
-});
-
-</script>
 
 </body>
 
